--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,30 @@
 *.exe
 *.out
 *.app
+
+# Other
+.vs/
+*.suo
+*.log
+*.db
+*.opendb
+*.ipch
+*.ide-shm
+*.ide.wal
+*.db-shm
+*.db-wal
+*.tlog
+*.pdb
+*.idb
+*.log
+*.lastbuildstate
+*.cache
+*.tlog
+*.xml
+*.sarif
+*.lock
+*.json
+*.metagen
+*.vcxproj
+*.vcxproj.user
+*.vcxproj.filters
