Removed .vcxproj from .gitignore

--- a/HitoriCore/HitoriCore.vcxproj
+++ b/HitoriCore/HitoriCore.vcxproj
@@ -123,6 +123,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="HitoriSolverCore.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="HitoriSolverCore.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
