--- a/HitoriCore/HitoriCore.vcxproj.filters
+++ b/HitoriCore/HitoriCore.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="HitoriSolverCore.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
